--- a/NietoYostenMvc/Web.config
+++ b/NietoYostenMvc/Web.config
@@ -13,6 +13,11 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
 
+  <connectionStrings>
+    <add name="NietoYostenDb" connectionString="Data Source=.\sqlexpress;Initial Catalog=nietoyosten;Integrated Security=True"
+         providerName="System.Data.SqlClient"/>
+  </connectionStrings>
+
   <system.web>
     
     <httpRuntime targetFramework="4.5" />
