--- a/NietoYostenMvc/Web.Debug.config
+++ b/NietoYostenMvc/Web.Debug.config
@@ -27,4 +27,12 @@
       </customErrors>
     -->
   </system.web>
+
+  <system.net>
+    <mailSettings xdt:Transform="Replace">
+      <smtp deliveryMethod="Network" from="noreply@nietoyosten.com">
+        <network clientDomain="nietoyosten.com" host="smtpout.secureserver.net" userName="noreply@nietoyosten.com" password="***REMOVED***" port="80"/>
+      </smtp>
+    </mailSettings>
+  </system.net>
 </configuration>
