--- a/NietoYostenMvc/Web.config
+++ b/NietoYostenMvc/Web.config
@@ -18,6 +18,8 @@
          providerName="System.Data.SqlClient"/>
   </connectionStrings>
 
+  
+
   <system.web>
     
     <httpRuntime targetFramework="4.5" />
@@ -35,6 +37,14 @@
       </namespaces>
     </pages>
   </system.web>
+
+  <system.net>
+    <mailSettings>
+      <smtp deliveryMethod="SpecifiedPickupDirectory" from="noreply@nietoyosten.com">
+        <specifiedPickupDirectory pickupDirectoryLocation="D:\smtp\" />
+      </smtp>
+    </mailSettings>
+  </system.net>
 
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
