--- a/NietoYostenMvc/NietoYostenMvc.csproj
+++ b/NietoYostenMvc/NietoYostenMvc.csproj
@@ -109,6 +109,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Code\Massive.cs" />
+    <Compile Include="Code\RequireRole.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ApplicationController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -184,6 +185,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Home\Family.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Account\ApprovalRequests.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
