First go live: minor fixes to database migration script, web.config to make it work in prod.

--- a/NietoYostenMvc/Web.Debug.config
+++ b/NietoYostenMvc/Web.Debug.config
@@ -14,6 +14,11 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
+  <connectionStrings>
+    <add name="NietoYostenDb"
+         connectionString="data source=nietoyosten2.db.8132634.hostedresource.com;Initial Catalog=nietoyosten2;User ID=nietoyosten2;Password=***REMOVED***"
+         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+  </connectionStrings>
   <system.web>
     <!--
       In the example below, the "Replace" transform will replace the entire 
