--- a/NietoYostenMvc/NietoYostenMvc.csproj
+++ b/NietoYostenMvc/NietoYostenMvc.csproj
@@ -197,6 +197,9 @@
   <ItemGroup>
     <Content Include="Views\Account\ApprovalRequests.cshtml" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Properties\PublishProfiles\local.pubxml" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
