--- a/NietoYostenMvc/Web.config
+++ b/NietoYostenMvc/Web.config
@@ -27,7 +27,7 @@
   </appSettings>
 
   <connectionStrings>
-    <add name="NietoYostenDb" connectionString="Data Source=.\sqlexpress;Initial Catalog=nietoyosten;Integrated Security=True"
+    <add name="NietoYostenDb" connectionString="Data Source=.\sqlexpress;Initial Catalog=nietoyosten2-dev;Integrated Security=True"
          providerName="System.Data.SqlClient"/>
   </connectionStrings>
 
@@ -81,6 +81,7 @@
   </system.webServer>
   
   <elmah>
+    <security allowRemoteAccess="yes" />
     <errorLog type="Elmah.XmlFileErrorLog, Elmah" logPath="~/App_Data/elmahlog" />
   </elmah>
   
