Integrate ImageResizer module

--- a/NietoYostenMvc/Web.config
+++ b/NietoYostenMvc/Web.config
@@ -12,6 +12,7 @@
       <section name="errorMail" requirePermission="false" type="Elmah.ErrorMailSectionHandler, Elmah" />
       <section name="errorFilter" requirePermission="false" type="Elmah.ErrorFilterSectionHandler, Elmah" />
     </sectionGroup>
+    <section name="resizer" type="ImageResizer.ResizerSection" requirePermission="false" />
   </configSections>
 
   <appSettings>
@@ -27,8 +28,7 @@
   </appSettings>
 
   <connectionStrings>
-    <add name="NietoYostenDb" connectionString="Data Source=.\sqlexpress;Initial Catalog=nietoyosten2-dev;Integrated Security=True"
-         providerName="System.Data.SqlClient"/>
+    <add name="NietoYostenDb" connectionString="Data Source=.\sqlexpress;Initial Catalog=nietoyosten2-dev;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <system.web>
@@ -50,6 +50,7 @@
       <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" />
       <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" />
       <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" />
+      <add name="ImageResizingModule" type="ImageResizer.InterceptModule" />
     </httpModules>
   </system.web>
 
@@ -77,11 +78,17 @@
       <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" preCondition="managedHandler" />
       <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" preCondition="managedHandler" />
       <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" preCondition="managedHandler" />
+      <add name="ImageResizingModule" type="ImageResizer.InterceptModule" />
     </modules>
   </system.webServer>
-  
+
   <elmah>
     <security allowRemoteAccess="yes" />
   </elmah>
-  
+
+  <resizer>
+    <plugins>
+      <add name="MvcRoutingShim" />
+    </plugins>
+  </resizer>
 </configuration>
