--- a/NietoYostenMvc/packages.config
+++ b/NietoYostenMvc/packages.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="elmah.corelibrary" version="1.2.2" targetFramework="net45" />
+  <package id="ImageResizer" version="3.4.2" targetFramework="net45" />
+  <package id="ImageResizer.Mvc" version="3.4.2" targetFramework="net45" />
+  <package id="ImageResizer.MvcWebConfig" version="3.4.2" targetFramework="net45" />
+  <package id="ImageResizer.WebConfig" version="3.4.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net45" />
