--- a/NietoYostenMvc/Web.config
+++ b/NietoYostenMvc/Web.config
@@ -50,6 +50,7 @@
       <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" />
       <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" />
       <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" />
+      <add name="UrlAuthModule" type="NietoYostenMvc.Code.UrlAuthModule" />
       <add name="ImageResizingModule" type="ImageResizer.InterceptModule" />
     </httpModules>
   </system.web>
@@ -78,6 +79,7 @@
       <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" preCondition="managedHandler" />
       <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" preCondition="managedHandler" />
       <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" preCondition="managedHandler" />
+      <add name="UrlAuthModule" type="NietoYostenMvc.Code.UrlAuthModule" />
       <add name="ImageResizingModule" type="ImageResizer.InterceptModule" />
     </modules>
   </system.webServer>
