Add correct smtp configuration, diagnostics for failed email notifications.

--- a/NietoYostenMvc/Web.Debug.config
+++ b/NietoYostenMvc/Web.Debug.config
@@ -36,7 +36,7 @@
   <system.net>
     <mailSettings xdt:Transform="Replace">
       <smtp deliveryMethod="Network" from="noreply@nietoyosten.com">
-        <network clientDomain="nietoyosten.com" host="smtpout.secureserver.net" userName="noreply@nietoyosten.com" password="***REMOVED***" port="80"/>
+        <network clientDomain="nietoyosten.com" host="relay-hosting.secureserver.net" userName="noreply@nietoyosten.com" password="***REMOVED***"/>
       </smtp>
     </mailSettings>
   </system.net>
