--- a/NietoYostenMvc/Web.config
+++ b/NietoYostenMvc/Web.config
@@ -86,6 +86,7 @@
 
   <elmah>
     <security allowRemoteAccess="yes" />
+    <errorLog type="Elmah.XmlFileErrorLog, Elmah" logPath="~/App_Data/elmahlog" />
   </elmah>
 
   <resizer>
