added code to generate new password, send email

--- a/NietoYostenMvc/NietoYostenMvc.csproj
+++ b/NietoYostenMvc/NietoYostenMvc.csproj
@@ -117,6 +117,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CodeBits\PasswordGenerator.cs" />
     <Compile Include="Code\ActionFilters.cs" />
     <Compile Include="Code\Massive.cs" />
     <Compile Include="Code\UrlAuthModule.cs" />
@@ -212,6 +213,7 @@
     <Content Include="Views\Pictures\Index.cshtml" />
     <Content Include="Views\Pictures\ShowAlbum.cshtml" />
     <Content Include="Views\Pictures\ShowPicture.cshtml" />
+    <Content Include="Views\Account\PasswordReset.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
