--- a/NietoYostenMvc/packages.config
+++ b/NietoYostenMvc/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CodeBits.PasswordGenerator" version="1.3.0" targetFramework="net45" />
   <package id="elmah.corelibrary" version="1.2.2" targetFramework="net45" />
   <package id="ImageResizer" version="3.4.2" targetFramework="net45" />
   <package id="ImageResizer.Mvc" version="3.4.2" targetFramework="net45" />
