--- a/NietoYostenMvc/Web.Debug.config
+++ b/NietoYostenMvc/Web.Debug.config
@@ -16,7 +16,7 @@
   -->
   <connectionStrings>
     <add name="NietoYostenDb"
-         connectionString="data source=nietoyosten2.db.8132634.hostedresource.com;Initial Catalog=nietoyosten2;User ID=nietoyosten2;Password=***REMOVED***"
+         connectionString="data source=nietoyosten2.db.8132634.hostedresource.com;Initial Catalog=nietoyosten2;User ID={username};Password={password}"
          xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
   </connectionStrings>
   <system.web>
@@ -36,7 +36,7 @@
   <system.net>
     <mailSettings xdt:Transform="Replace">
       <smtp deliveryMethod="Network" from="noreply@nietoyosten.com">
-        <network clientDomain="nietoyosten.com" host="relay-hosting.secureserver.net" userName="noreply@nietoyosten.com" password="***REMOVED***"/>
+        <network clientDomain="nietoyosten.com" host="relay-hosting.secureserver.net" userName="noreply@nietoyosten.com" password="{password}"/>
       </smtp>
     </mailSettings>
   </system.net>
