--- a/NietoYostenWebApp/Web.Debug.config
+++ b/NietoYostenWebApp/Web.Debug.config
@@ -16,7 +16,7 @@
   -->
   <connectionStrings>
     <add name="NietoYostenConnectionString"
-         connectionString="data source=nietoyosten.db.8132634.hostedresource.com;Initial Catalog=NietoYosten;User ID=nietoyosten;Password=***REMOVED***"
+         connectionString="data source=nietoyosten.db.8132634.hostedresource.com;Initial Catalog=NietoYosten;User ID={username};Password={password}"
          xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
   </connectionStrings>
   <system.web>
@@ -49,7 +49,7 @@
   <system.net>
     <mailSettings xdt:Transform="Replace">
       <smtp deliveryMethod="Network" from="noreply@nietoyosten.com">
-        <network clientDomain="nietoyosten.com" host="smtpout.secureserver.net" userName="noreply@nietoyosten.com" password="***REMOVED***" port="80"/>
+        <network clientDomain="nietoyosten.com" host="smtpout.secureserver.net" userName="noreply@nietoyosten.com" password="{password}" port="80"/>
       </smtp>
     </mailSettings>
   </system.net>
