remove fb secrets

--- a/NietoYostenWebApp/Web.Debug.config
+++ b/NietoYostenWebApp/Web.Debug.config
@@ -40,9 +40,9 @@
   <appSettings>
     <add key="BaseUrl" value="http://nietoyosten.com"
          xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-    <add key="FacebookAppId" value="***REMOVED***"
+    <add key="FacebookAppId" value="{fb_app_id}"
          xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-    <add key="FacebookAppSecret" value="***REMOVED***"
+    <add key="FacebookAppSecret" value="{fb_app_secret}"
          xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
   </appSettings>
 
