--- a/NietoYostenWebApp/web.config
+++ b/NietoYostenWebApp/web.config
@@ -22,7 +22,6 @@
     <add name="ElmahConnectionString" connectionString="Data Source=.\sqlexpress;Initial Catalog=ELMAH;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
-    <machineKey validationKey="***REMOVED***" decryptionKey="***REMOVED***" validation="SHA1" decryption="AES" />
     <roleManager enabled="true">
       <providers>
         <clear />
@@ -176,8 +175,8 @@
     <add key="nPaginationLinks" value="5" />
     <add key="articlesPerPage" value="5" />
     <!-- Facebook app -->
-    <add key="FacebookAppId" value="***REMOVED***"/>
-    <add key="FacebookAppSecret" value="***REMOVED***"/>
+    <add key="FacebookAppId" value="{fb_app_id}"/>
+    <add key="FacebookAppSecret" value="{fb_app_secret}"/>
   </appSettings>
   <elmah>
     <security allowRemoteAccess="1" />
