Improve UI / layout of pictures section.
Fix "add album" (code to create album folder was missing). Moved
sub-menu to top. Changed functionality to start uploading pictures as
soon as files are chosen.

--- a/NietoYostenMvc/NietoYostenMvc.csproj
+++ b/NietoYostenMvc/NietoYostenMvc.csproj
@@ -142,6 +142,11 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Content Include="Content\styles.css" />
+    <Content Include="Database\changes\20140209_remove_dots_from_picture_titles.sql" />
+    <Content Include="Database\changes\20140223_upload_pictures.sql" />
+    <Content Include="Database\MigrateToVersion2.sql" />
+    <Content Include="Database\nietoyosten2-bootstrap.sql" />
+    <Content Include="Database\NietoYostenDb.sql" />
     <Content Include="Global.asax" />
     <Content Include="images\caras\ani2.jpg" />
     <Content Include="images\caras\cristy.jpg" />
