Edit/Add articles functionality

--- a/NietoYostenMvc/Web.config
+++ b/NietoYostenMvc/Web.config
@@ -28,7 +28,7 @@
   </appSettings>
 
   <connectionStrings>
-    <add name="NietoYostenDb" connectionString="Data Source=.\sqlexpress;Initial Catalog=ny2-dev;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="NietoYostenDb" connectionString="Data Source=.\sqlexpress;Initial Catalog=ny2-dev2;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <system.web>
