--- a/NietoYostenMvc/NietoYostenMvc.csproj
+++ b/NietoYostenMvc/NietoYostenMvc.csproj
@@ -118,6 +118,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Code\ActionFilters.cs" />
+    <Compile Include="Code\ControllerUtil.cs" />
     <Compile Include="Code\Massive.cs" />
     <Compile Include="Code\UrlAuthModule.cs" />
     <Compile Include="Controllers\AccountController.cs" />
