Changes for azure deployment
Changes for azure deployment

--- a/NietoYostenMvc/Web.config
+++ b/NietoYostenMvc/Web.config
@@ -36,6 +36,8 @@
 
     <compilation debug="true" targetFramework="4.5" />
 
+    <customErrors mode="Off"/>
+
     <pages>
       <namespaces>
         <add namespace="System.Web.Helpers" />
