--- a/NietoYostenMvc/NietoYostenMvc.csproj
+++ b/NietoYostenMvc/NietoYostenMvc.csproj
@@ -168,7 +168,10 @@
     <Content Include="Views\Web.config" />
     <Content Include="Views\Article\Index.cshtml" />
     <Content Include="Views\Article\Edit.cshtml" />
+    <None Include="Properties\PublishProfiles\Azure.pubxml" />
     <None Include="Properties\PublishProfiles\nietoyosten - Azure.pubxml" />
+    <None Include="Properties\PublishProfiles\nietoyosten - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\nietoyosten - Web Deploy.pubxml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
