--- a/NietoYostenMvc/NietoYostenMvc.csproj
+++ b/NietoYostenMvc/NietoYostenMvc.csproj
@@ -158,6 +158,7 @@
     <Compile Include="Code\ActionFilters.cs" />
     <Compile Include="Code\ControllerUtil.cs" />
     <Compile Include="Code\Massive.cs" />
+    <Compile Include="Code\NyUtil.cs" />
     <Compile Include="Code\UrlAuthModule.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ApplicationController.cs" />
