--- a/NietoYostenMvc/Web.Release.config
+++ b/NietoYostenMvc/Web.Release.config
@@ -28,4 +28,12 @@
       </customErrors>
     -->
   </system.web>
+
+  <system.net>
+    <mailSettings xdt:Transform="Replace">
+      <smtp deliveryMethod="Network" from="noreply@nietoyosten.com">
+        <network clientDomain="nietoyosten.com" host="mail.nietoyosten.com" userName="nietoyosten"/>
+      </smtp>
+    </mailSettings>
+  </system.net>
 </configuration>
