--- a/NietoYostenMvc/Web.config
+++ b/NietoYostenMvc/Web.config
@@ -60,7 +60,7 @@
   <system.net>
     <mailSettings>
       <smtp deliveryMethod="SpecifiedPickupDirectory" from="noreply@nietoyosten.com">
-        <specifiedPickupDirectory pickupDirectoryLocation="D:\smtp\" />
+        <specifiedPickupDirectory pickupDirectoryLocation="C:\smtp\" />
       </smtp>
     </mailSettings>
   </system.net>
