--- a/NietoYostenMvc/NietoYostenMvc.csproj
+++ b/NietoYostenMvc/NietoYostenMvc.csproj
@@ -174,6 +174,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Articles.cs" />
+    <Compile Include="Models\PasswordResetTokens.cs" />
     <Compile Include="Models\Pictures.cs" />
     <Compile Include="Models\Users.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -206,6 +207,7 @@
     <Content Include="Views\Article\Edit.cshtml" />
     <None Include="Properties\PublishProfiles\nietoyosten - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\nietoyosten - Web Deploy.pubxml" />
+    <Content Include="Views\Account\ResetPassword.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -237,9 +239,6 @@
     <Content Include="Views\Account\Register.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Account\RegistrationDone.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="App_Code\HTML.cshtml" />
   </ItemGroup>
   <ItemGroup>
@@ -252,7 +251,7 @@
     <Content Include="Views\Pictures\ShowPicture.cshtml" />
     <Content Include="Views\Pictures\Upload.cshtml" />
     <Content Include="Views\Pictures\AddAlbum.cshtml" />
-    <Content Include="Views\Account\PasswordReset.cshtml" />
+    <Content Include="Views\Account\RecoverPassword.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
