--- a/ImportNietoData/App.config
+++ b/ImportNietoData/App.config
@@ -1,8 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
-    <add name="NietoYostenDb"
-          connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;Initial Catalog=NietoYosten"
-          providerName="System.Data.SqlClient" />
+    <add name="NietoYostenDb" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;Initial Catalog=NietoYosten" providerName="System.Data.SqlClient" />
   </connectionStrings>
-</configuration>
+<system.data>
+    <DbProviderFactories>
+      <remove invariant="MySql.Data.MySqlClient" />
+      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.6.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
+    </DbProviderFactories>
+  </system.data></configuration>
