--- a/NietoYostenMvc/NietoYostenMvc.csproj
+++ b/NietoYostenMvc/NietoYostenMvc.csproj
@@ -156,9 +156,14 @@
   <ItemGroup>
     <Compile Include="CodeBits\PasswordGenerator.cs" />
     <Compile Include="Code\ActionFilters.cs" />
+    <Compile Include="Code\ImageStorage.cs" />
     <Compile Include="Code\ControllerUtil.cs" />
+    <Compile Include="Code\HandleUserFriendlyErrorAttribute.cs" />
     <Compile Include="Code\Massive.cs" />
     <Compile Include="Code\NyUtil.cs" />
+    <Compile Include="Code\UserFriendlyException.cs" />
+    <Compile Include="Controllers\ErrorController.cs" />
+    <Compile Include="Models\PageResult.cs" />
     <Compile Include="Code\UrlAuthModule.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ApplicationController.cs" />
@@ -173,9 +178,10 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\AlbumsModel.cs" />
     <Compile Include="Models\Articles.cs" />
     <Compile Include="Models\PasswordResetTokens.cs" />
-    <Compile Include="Models\Pictures.cs" />
+    <Compile Include="Models\PicturesModel.cs" />
     <Compile Include="Models\Users.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
