--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\CreateLuceneIndex\packages.config" />
+  <repository path="..\ImportNietoData\packages.config" />
+  <repository path="..\NietoYostenMvc.Tests\packages.config" />
   <repository path="..\NietoYostenMvc\packages.config" />
   <repository path="..\NietoYostenWebApp\packages.config" />
 </repositories>
