--- a/NietoYostenMvc/NietoYostenMvc.csproj
+++ b/NietoYostenMvc/NietoYostenMvc.csproj
@@ -198,6 +198,7 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="Scripts\ShowAlbum.js" />
     <Content Include="Scripts\UploadPicture.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
