--- a/NietoYostenMvc/Web.config
+++ b/NietoYostenMvc/Web.config
@@ -36,7 +36,7 @@
 
     <compilation debug="true" targetFramework="4.5" />
 
-    <customErrors mode="On" />
+    <customErrors mode="RemoteOnly" />
 
     <pages>
       <namespaces>
