--- a/NietoYostenMvc/packages.config
+++ b/NietoYostenMvc/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="CodeBits.PasswordGenerator" version="1.3.0" targetFramework="net45" />
   <package id="elmah.corelibrary" version="1.2.2" targetFramework="net45" />
+  <package id="Facebook" version="7.0.6" targetFramework="net45" />
   <package id="ImageResizer" version="3.4.3" targetFramework="net45" />
   <package id="ImageResizer.Mvc" version="3.4.3" targetFramework="net45" />
   <package id="ImageResizer.MvcWebConfig" version="3.4.2" targetFramework="net45" />
