--- a/NietoYostenMvc.Tests/App.config
+++ b/NietoYostenMvc.Tests/App.config
@@ -1,8 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
-    <add name="NietoYostenDb" connectionString="Data Source=.\sqlexpress;Initial Catalog=nietoyosten2;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="NietoYostenDb" connectionString="Data Source=.\sqlexpress;Initial Catalog=nietoyosten.test;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
+
+  <appSettings file="AppSettingsSecrets.config">
+    <add key="TestConfig" value="rafa" />
+  </appSettings>
+  
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
