--- a/NietoYostenMvc.Tests/NietoYostenMvc.Tests.csproj
+++ b/NietoYostenMvc.Tests/NietoYostenMvc.Tests.csproj
@@ -38,8 +38,15 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Rhino.Mocks, Version=3.6.0.0, Culture=neutral, PublicKeyToken=0b3305902db7183f, processorArchitecture=MSIL">
+      <HintPath>..\packages\RhinoMocks.3.6.1\lib\net\Rhino.Mocks.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Web" />
+    <Reference Include="System.Web.Mvc, Version=4.0.0.1, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="xunit.abstractions">
       <HintPath>..\packages\xunit.abstractions.2.0.0\lib\net35\xunit.abstractions.dll</HintPath>
     </Reference>
@@ -64,6 +71,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="AlbumsModelTests.cs" />
+    <Compile Include="FacebookLoginSpecs.cs" />
     <Compile Include="NyUtilTests.cs" />
     <Compile Include="PicturesModelTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -77,6 +85,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="AppSettingsSecrets.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <Choose>
