--- a/NietoYostenMvc.Tests/NietoYostenMvc.Tests.csproj
+++ b/NietoYostenMvc.Tests/NietoYostenMvc.Tests.csproj
@@ -70,10 +70,12 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="AlbumsModelTests.cs" />
-    <Compile Include="FacebookLoginSpecs.cs" />
+    <Compile Include="Mocks\MockHttpContext.cs" />
+    <Compile Include="Tests\AlbumsModelTests.cs" />
+    <Compile Include="Specs\FacebookLoginSpecs.cs" />
+    <Compile Include="Mocks\MockFactory.cs" />
     <Compile Include="NyUtilTests.cs" />
-    <Compile Include="PicturesModelTests.cs" />
+    <Compile Include="Tests\PicturesModelTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestUtil.cs" />
   </ItemGroup>
@@ -90,6 +92,7 @@
     </None>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
