--- a/NietoYostenMvc/NietoYostenMvc.csproj
+++ b/NietoYostenMvc/NietoYostenMvc.csproj
@@ -166,6 +166,7 @@
     <Compile Include="Code\ImageStorage.cs" />
     <Compile Include="Code\ControllerUtil.cs" />
     <Compile Include="Code\HandleUserFriendlyErrorAttribute.cs" />
+    <Compile Include="Code\Mailer.cs" />
     <Compile Include="Code\Massive.cs" />
     <Compile Include="Code\NyUtil.cs" />
     <Compile Include="Code\UserFriendlyException.cs" />
