--- a/NietoYostenMvc.Tests/NietoYostenMvc.Tests.csproj
+++ b/NietoYostenMvc.Tests/NietoYostenMvc.Tests.csproj
@@ -37,6 +37,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Facebook, Version=6.0.10.0, Culture=neutral, PublicKeyToken=58cb4f2111d1e6de, processorArchitecture=MSIL">
+      <HintPath>..\packages\Facebook.7.0.6\lib\net45\Facebook.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Rhino.Mocks, Version=3.6.0.0, Culture=neutral, PublicKeyToken=0b3305902db7183f, processorArchitecture=MSIL">
       <HintPath>..\packages\RhinoMocks.3.6.1\lib\net\Rhino.Mocks.dll</HintPath>
@@ -65,13 +69,18 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+          <Private>False</Private>
+        </Reference>
       </ItemGroup>
     </Otherwise>
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Mocks\MockHttpContext.cs" />
+    <Compile Include="Specs\FacebookLogin\FacebookApiThrowsWhenGettingEmail.cs" />
+    <Compile Include="Specs\FacebookLogin\FacebookSpecsBase.cs" />
+    <Compile Include="Specs\FacebookLogin\InvalidRequestIsReceived.cs" />
     <Compile Include="Specs\FacebookLogin\UnapprovedUserLogsIn.cs" />
     <Compile Include="Specs\FacebookLogin\UserIsNotConnectedToFacebookApp.cs" />
     <Compile Include="Specs\FacebookLogin\UserWithFacebookIdLogsIn.cs" />
@@ -90,11 +99,15 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="AppSettingsSecrets.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup />
   <Choose>
