Redirect http to https

--- a/NietoYostenMvc/Web.Release.config
+++ b/NietoYostenMvc/Web.Release.config
@@ -29,6 +29,21 @@
     -->
   </system.web>
 
+  <system.webServer xdt:Transform="Insert">
+    <rewrite>
+      <rules>
+        <rule name="Redirect to https">
+          <match url="(.*)"/>
+          <conditions>
+            <add input="{HTTPS}" pattern="Off"/>
+            <add input="{REQUEST_METHOD}" pattern="^get$|^head$"/>
+          </conditions>
+          <action type="Redirect" url="https://{HTTP_HOST}/{R:1}"/>
+        </rule>
+      </rules>
+    </rewrite>
+  </system.webServer>
+
   <system.net>
     <mailSettings xdt:Transform="Replace">
       <smtp deliveryMethod="Network" from="noreply@nietoyosten.com">
